# cpp-example-ros2-bridge

./: .clang-format  .gitignore  README.md  lychee.toml  pixi.toml
.github/workflows/: cpp.yml  labels.yml
rerun_bridge/: CMakeLists.txt  package.xml
rerun_bridge/include/rerun_bridge/: color_mapper.hpp  color_maps.hpp  point_cloud_processor.hpp  rerun_ros_interface.hpp
rerun_bridge/launch/: carla_example.launch  carla_example_params.yaml  go2_example.launch  go2_example_params.yaml
rerun_bridge/src/rerun_bridge/: collection_adapters.hpp  color_mapper.cpp  color_maps.cpp  point_cloud_processor.cpp  rerun_ros_interface.cpp  visualizer_node.cpp  visualizer_node.hpp
scripts/: view_urdf.sh
